[metadata]
name = cacholote
license = Apache License 2.0
description = Efficiently cache calls to functions
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    diskcache

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = True

[options.package_data]
cacholote =
    py.typed

[mypy-diskcache.*]
ignore_missing_imports = True

[mypy-redislite.*]
ignore_missing_imports = True

[mypy-zarr.*]
ignore_missing_imports = True
